[project]
name = "lume-market-maker"
version = "0.1.0"
description = "Python SDK for Lume prediction markets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "web3>=7.0.0",
    "eth-account>=0.13.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
    "websockets>=12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "psycopg[binary]>=3.1.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
